Anonymous | Login | 2019-12-12 16:07 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0028915 | Open CASCADE | [OCCT] OCCT:Configuration | public | 2017-07-17 11:11 | 2019-03-03 01:21 | ||||
Reporter | kgv | ||||||||
Assigned To | kgv | ||||||||
Priority | normal | Severity | integration request | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 6.6.0 | ||||||||
Target Version | [OCCT] 7.2.0 | Fixed in Version | [OCCT] 7.2.0 | ||||||
Summary | 0028915: Configuration, Font_BRepFont - do not include FreeType headers within OCCT headers | ||||||||
Description | It is desired to hide inclusion of external headers in OCCT public API headers to avoid redundant building/packaging issues. | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|||||||||||||
|
![]() |
|
(0068366) git (administrator) 2017-07-17 11:14 |
Branch CR28915 has been created by kgv. SHA-1: f9801cf97ab753fb656cd72b243168ef6f72d3b5 Detailed log of new commits: Author: kgv Date: Mon Jul 17 11:12:48 2017 +0300 0028915: Configuration, Font_BRepFont - do not include FreeType headers within OCCT headers |
(0068372) kgv (developer) 2017-07-17 13:58 |
Please take the patch. http://jenkins-test-10.nnov.opencascade.com/view/CR28915-master-KGV/view/OCCT%20compile/ [^] |
(0068386) mkv (tester) 2017-07-17 16:37 |
Dear BugMaster, Branch CR28915 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: f9801cf97ab753fb656cd72b243168ef6f72d3b5 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 10 (10 on master) Windows: 0 (0 on master) MacOS : 28 (28 on master) |
(0068387) mkv (tester) 2017-07-17 16:38 |
Dear BugMaster, Branch CR28915 from occt git-repository is TESTED. |
(0068574) git (administrator) 2017-07-21 16:16 |
Branch CR28915 has been deleted by kgv. SHA-1: f9801cf97ab753fb656cd72b243168ef6f72d3b5 |
![]() |
|||
occt: master f9801cf9
Timestamp: 2017-07-17 08:12:48 Author: kgv [ Details ] [ Diff ] |
0028915: Configuration, Font_BRepFont - do not include FreeType headers within OCCT headers | ||
mod - src/Font/Font_BRepFont.cxx | [ Diff ] [ File ] | ||
mod - src/Font/Font_BRepFont.hxx | [ Diff ] [ File ] | ||
mod - src/Font/Font_FTFont.cxx | [ Diff ] [ File ] | ||
mod - src/Font/Font_FTFont.hxx | [ Diff ] [ File ] | ||
mod - src/Font/Font_FTLibrary.cxx | [ Diff ] [ File ] | ||
mod - src/Font/Font_FTLibrary.hxx | [ Diff ] [ File ] | ||
mod - src/OpenGl/OpenGl_Text.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2017-07-17 11:11 | kgv | New Issue | |
2017-07-17 11:11 | kgv | Assigned To | => kgv |
2017-07-17 11:14 | kgv | Summary | Configuration, Font_BRepFont - do not include FreeType headers in OCCT headers => Configuration, Font_BRepFont - do not include FreeType headers within OCCT headers |
2017-07-17 11:14 | git | Note Added: 0068366 | |
2017-07-17 11:30 | kgv | Relationship added | child of 0023457 |
2017-07-17 11:30 | kgv | Product Version | => 6.6.0 |
2017-07-17 13:58 | kgv | Note Added: 0068372 | |
2017-07-17 13:58 | kgv | Assigned To | kgv => bugmaster |
2017-07-17 13:58 | kgv | Status | new => resolved |
2017-07-17 13:59 | kgv | Severity | minor => integration request |
2017-07-17 13:59 | kgv | Status | resolved => reviewed |
2017-07-17 16:37 | mkv | Note Added: 0068386 | |
2017-07-17 16:38 | mkv | Note Added: 0068387 | |
2017-07-17 16:38 | mkv | Status | reviewed => tested |
2017-07-17 16:38 | mkv | Test case number | => Not needed |
2017-07-21 10:55 | kgv | Relationship added | related to 0028931 |
2017-07-21 16:08 | kgv | Changeset attached | => occt master f9801cf9 |
2017-07-21 16:08 | kgv | Assigned To | bugmaster => kgv |
2017-07-21 16:08 | kgv | Status | tested => verified |
2017-07-21 16:08 | kgv | Resolution | open => fixed |
2017-07-21 16:16 | git | Note Added: 0068574 | |
2017-09-29 16:17 | aiv | Fixed in Version | => 7.2.0 |
2017-09-29 16:28 | aiv | Status | verified => closed |
2018-09-29 21:18 | kgv | Relationship added | related to 0030179 |
2019-03-03 01:21 | kgv | Relationship added | has duplicate 0026725 |
Copyright © 2000 - 2019 MantisBT Team |