0028915: Configuration, Font_BRepFont - do not include FreeType headers within OCCT headers